--- a/templates/book-catalog.html
+++ b/templates/book-catalog.html
@@ -1,15 +1,16 @@
-<html lang="en">
+{{ define "book-catalog" }}
+<!DOCTYPE html>
 
 <head>
   <title>Book Catalog</title>
-  <link rel="stylesheet" type="text/css" href="/static/css/BookCatalog.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/book-catalog.css">
   <link rel="icon" href="/static/img/icons/open-book.png" type="image/png">
 </head>
 
 <body>
   {{if eq .Role "user" }}
-  {{ template "user-navbar" . }}
-  {{ if  gt .Messages 0 }}
+  {{ template "user-navbar" .}}
+  {{ if gt .Messages 0 }}
   <script>
     var n_messages = "{{ .Messages }}";
     alert('You have ' + String(n_messages) + ' new messages');
@@ -18,12 +19,13 @@
   </script>
   {{ end }}
   {{else}}
-    {{ template "admin-navbar" . }}
+    {{ template "admin-navbar" .}}
     {{end}}
     <h1>Book Catalog</h1>
     <div id="books">
+      {{ if .Books }}
       {{ range .Books}}
-      {{ if gt .Book.Quantity 0 }}
+      {{ if gt .Book.Quantity  0 }}
       <div class="book">
         <h2>
           {{ .Book.Title }}
@@ -37,8 +39,9 @@
         <p>
           {{ .Status }}
         </p>
-        <button onclick=" viewBookDetails('{{ .Book.BookID }}')">View Details</button>
+        <button onclick=" viewBookDetails('{{ .Book.BookID }}'  )">View Details</button>
       </div>
+      {{ end }}
       {{ end }}
       {{ end }}
     </div>
@@ -46,3 +49,5 @@
 <script src="/static/js/book-catalog.js"></script>
 
 </html>
+
+{{ end }}
