--- a/templates/borrowing-history.html
+++ b/templates/borrowing-history.html
@@ -1,6 +1,9 @@
+{{ define "borrowing-history" }}
+<!DOCTYPE html>
+
 <head>
   <title>Borrowing History</title>
-  <link rel="stylesheet" type="text/css" href="/static/css/History.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/borrowing-history.css">
   <link rel="icon" href="/static/img/icons/open-book.png" type="image/png">
 </head>
 
@@ -34,3 +37,7 @@
     </table>
   </div>
 </body>
+
+</html>
+
+{{ end }}
