--- a/templates/sys-messages.html
+++ b/templates/sys-messages.html
@@ -2,30 +2,24 @@
 
 <head>
   <title>{{.Type}}</title>
-  <link rel="stylesheet" type="text/css" href="/static/css/error.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/sys-messages.css">
   <link rel="icon" href="/static/img/icons/book.png" type="image/png">
 </head>
 
 <body>
-  <p>{{.message}}</p>
-  {{if eq .Type "Warning"}}
+  <p>
+    {{ .Message }}
+  </p>
   <script>
     let img = document.createElement('img');
-    img.src = '/resources/trolls/' + '{{.message}}' + '.jpg';
+    img.src = '/static/img/sys-img/' + '{{.Type}}' + '.gif';
     document.body.appendChild(img);
   </script>
+  {{if eq .Type "Warning"}}
+  <button onclick="revenge()">Back to Home</button>
   {{else}}
-    <script>
-      let img = document.createElement('img');
-      img.src = '/resources/trolls/' + '{{.message}}' + '.gif';
-      document.body.appendChild(img);
-    </script>
+    <button onclick="window.location.href='/books'">Back to Catalog</button>
     {{end}}
-    {{if eq .Type "Warning"}}
-    <button onclick="revenge()">Back to Home</button>
-    {{else}}
-      <button onclick="window.location.href='/books'">Back to Catalog</button>
-      {{end}}
 </body>
 
 </html>
