--- a/templates/book-details.html
+++ b/templates/book-details.html
@@ -1,69 +1,72 @@
-<html lang="en">
+{{define "book-details"}}
+<!DOCTYPE html>
+<html>
 
 <head>
   <title>Book Details</title>
-  <link rel="stylesheet" type="text/css" href="/static/css/BookDetails.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/book-details.css">
   <link rel="icon" href="/static/img/icons/book.png" type="image/png">
 </head>
 
 <body>
   {{if eq .Role "user" }}
   {{ template "user-navbar" . }}
-  {{else}}
-    {{ template "admin-navbar" . }}
-    {{end}}
-    <h1>
-      {{ Book.title }}
-    </h1>
-    <p>Author:
-      {{ Book.Author }}
-    </p>
-    <p>Genre:
-      {{ Book.Genre }}
-    </p>
-    <p>Quantity Available:
-      {{ Book.Quantity}}
-    </p>
-    {{ if eq .Role 'user' }}
-    {{ if eq .Status 'Available' }}
-    <form action="/checkout" method="POST">
-      <input type="type" name="bookId" value="{{ Book.ID}}" hidden readonly>
-      <input type="type" name="action" value="checkout" hidden readonly>
-      <button type="submit">Checkout</button>
-    </form>
-    {{ else  }}
-    {{ if eq .Status 'Borrowed' }}
-    <form action="/checkin" method="POST">
-      <input type="type" name="bookId" value="{{ Book.ID}}" hidden readonly>
-      <input type="type" name="action" value="checkin" hidden readonly>
-      <button type="submit">Checkin</button>
-    </form>
-    {{ else  }}
-    {{ if eq .Status 'Requested' }}
-    <p> Already Requested</p>
-    {{ end }}
-    {{ end }}
-    {{ end }}
-    {{ end }}
+  {{ else }}
+  {{ template "admin-navbar" . }}
+  {{ end }}
+  <h1>
+    {{ .Book.Title }}
+  </h1>
+  <p>Author:
+    {{ .Book.Author }}
+  </p>
+  <p>Genre:
+    {{ .Book.Genre }}
+  </p>
+  <p>Quantity Available:
+    {{ .Book.Quantity}}
+  </p>
+  {{ if eq .Role "user" }}
+  {{ if eq .Status "Available" }}
+  <form action="/checkout" method="POST">
+    <input type="hidden" name="bookId" value="{{ .Book.BookID}}">
+    <input type="hidden" name="action" value="checkout">
+    <button type="submit">Checkout</button>
+  </form>
+  {{ else}}
+  {{ if eq .Status "Borrowed" }}
+  <form action="/checkin" method="POST">
+    <input type="hidden" name="bookId" value="{{ .Book.BookID}}" hidden>
+    <input type="hidden" name="action" value="checkin" hidden>
+    <button type="submit">Checkin</button>
+  </form>
+  {{ else }}
+  {{ if eq .Status "Requested" }}
+  <p> Already Requested</p>
+  {{ end }}
+  {{ end }}
+  {{ end }}
+  {{ end }}
 
-    <h2>Borrowing History</h2>
-    <div id="history">
-      {{ range .BorrowingHistory }}
-      <div>
-        <p>Borrowed by
-          {{ .Username }}
-        </p>
-        <p>Borrowed on
-          {{ .Borrowed_date }}
-        </p>
-        {{ if eq .Returned_date 0 }}
-        <p>Returned on
-          {{ .Returned_date }}
-        </p>
-        {{ end }}
-      </div>
+  <h2>Borrowing History</h2>
+  <div id="history">
+    {{ range .BorrowingHistory }}
+    <div>
+      <p>Borrowed by
+        {{ .Username }}
+      </p>
+      <p>Borrowed on
+        {{ .Borrowed_date }}
+      </p>
+      {{ if .Returned_date }}
+      <p>Returned on
+        {{ .Returned_date }}
+      </p>
       {{ end }}
     </div>
+    {{ end }}
+  </div>
 </body>
 
-</html
+</html>
+{{end}}
