--- a/templates/book-management.html
+++ b/templates/book-management.html
@@ -1,4 +1,5 @@
-<html lang="en">
+{{ define "book-management"}}
+<!DOCTYPE html>
 
 <head>
   <title>Add Book</title>
@@ -36,3 +37,5 @@
 </body>
 
 </html>
+
+{{ end }}
