--- a/templates/requests.html
+++ b/templates/requests.html
@@ -1,4 +1,5 @@
-<html lang="en">
+{{ define "requests" }}
+<!DOCTYPE html>
 
 <head>
   <meta charset="UTF-8">
@@ -25,7 +26,7 @@
           </tr>
         </thead>
         <tbody>
-          {{range .Requests}}
+          {{range .Messages}}
           {{ if eq .Status "pending" }}
           <tr>
             <td>
@@ -61,3 +62,5 @@
 </body>
 
 </html>
+
+{{ end }}
