--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Library Management System</title>
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="icon" href="/static/img/icon/book.png" type="image/png">
 </head>
 
 <body>
-  <header>
-    <h1>Library Management System</h1>
+  <header class="header">
+    <h1 class="header__title">Library Management System</h1>
   </header>
-  <main>
+  <main class="main">
     <section class="hero">
-      <h2>Welcome to our Library!</h2>
-      <p>Explore our vast collection of books, articles, and resources.</p>
-      <button class="btn" id="login-btn">Login</button>
-      <button class="btn" id="register-btn">Register</button>
+      <h2 class="hero__title">Welcome to our Library!</h2>
+      <p class="hero__description">Explore our vast collection of books, articles, and resources.</p>
+      <div class="hero__buttons">
+        <button class="btn" id="login-btn">Login</button>
+        <button class="btn" id="register-btn">Register</button>
+      </div>
     </section>
   </main>
-  <footer>
-    <p>&copy; 2024 Library Management System </p>
+  <footer class="footer">
+    <p class="footer__text">&copy; 2024 Library Management System</p>
   </footer>
 
 </body>
