--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,13 +10,11 @@
 </head>
 
 <body>
-
   <div class="form-container">
-
     <form id="Register" action="/register" method="post">
       <h2>Register</h2>
       <div class="input-group">
-        <input type="text" id="signupUsername" name="username" required placeholder="username">
+        <input type="text" id="signupUsername" name="username" required placeholder="Username">
       </div>
       <div class="input-group">
         <input type="password" id="signupPassword" name="password" required placeholder="Password">
