--- a/templates/requests.html
+++ b/templates/requests.html
@@ -1,64 +1,72 @@
 {{ define "requests" }}
 <!DOCTYPE html>
 
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Requests</title>
   <link rel="stylesheet" href="/static/css/requests.css">
-  <link rel="icon" href="/static/img/icons/book.png" type="image/png">
+  <link rel="icon" href="/static/img/icon/book.png" type="image/png">
 </head>
 
 <body>
   {{ template "admin-navbar" . }}
-  <h1>Pending Requests</h1>
-  <div id="requests">
-    <form action="/apply-changes" method="POST">
-      <table>
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Requester</th>
-            <th>Book ID</th>
-            <th>Book Title</th>
-            <th>Request Details</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{range .Messages}}
-          {{ if eq .Status "pending" }}
-          <tr>
-            <td>
-              {{ .ID }}
-            </td>
-            <td>
-              {{ .Username }}
-            </td>
-            <td>
-              {{ .BookID }}
-            </td>
-            <td>
-              {{ .Title}}
-            </td>
-            <td>
-              {{ .Request }}
-            </td>
-            <td>
-              <select name="{{ .ID }}" class="status">
-                <option value="pending" selected>Pending</option>
-                <option value="approved">Approved</option>
-                <option value="disapproved">Disapproved</option>
-              </select>
-            </td>
-          </tr>
-          {{end}}
-          {{end}}
-        </tbody>
-      </table>
-      <button id="apply-changes" type="submit">Apply Changes</button>
-    </form>
-  </div>
+  <main class="main-content">
+    <h1 class="main-title">Pending Requests</h1>
+    <div class="requests">
+      <form action="/apply-changes" method="POST">
+        <table class="requests-table">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Requester</th>
+              <th>Book ID</th>
+              <th>Book Title</th>
+              <th>Request Details</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{range .Messages}}
+            {{ if eq .Status "pending" }}
+            <tr>
+              <td>
+                {{ .ID }}
+              </td>
+              <td>
+                {{ .Username }}
+              </td>
+              <td>
+                {{ if .BookID }}
+                {{ .BookID.Int64 }}
+                {{ end }}
+              </td>
+              <td>
+                {{ if .Title }}
+                {{ .Title}}
+                {{ end }}
+              </td>
+              <td>
+                {{ .Request }}
+              </td>
+              <td>
+                <select name="{{ .ID }}" class="status-select">
+                  <option value="pending" selected>Pending</option>
+                  <option value="approved">Approved</option>
+                  <option value="disapproved">Disapproved</option>
+                </select>
+              </td>
+            </tr>
+            {{end}}
+            {{end}}
+          </tbody>
+        </table>
+        <button id="apply-changes" type="submit" class="btn">Apply Changes</button>
+      </form>
+    </div>
+  </main>
 </body>
 
 </html>
