--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,89 +1,88 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+:root {
+    --background-color: #121212;
+    --text-color: #e0e0e0;
+    --primary-color: #bb86fc;
+    --secondary-color: #03dac6;
+    --font-family: 'Arial', sans-serif;
 }
 
 body {
-    background: #333;
+    font-family: var(--font-family);
+    background-color: var(--background-color);
+    color: var(--text-color);
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
+.container {
+    width: 100%;
+    max-width: 400px;
+    padding: 2rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+    background-color: #1e1e1e;
+    border-radius: 0.5rem;
+}
+
 .form-container {
-    padding: 3rem 6rem;
-    background: black;
-    border-radius: .5rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
-    width: auto;
-    max-width: 100%;
-    overflow: hidden;
-    position: relative;
-    margin: 1rem;
-}
-
-form {
-    width: auto;
-}
-
-form.active {
-    display: block;
+    text-align: center;
 }
 
 h2 {
-    margin-bottom: 1rem;
-    color: #fff;
+    margin-bottom: 1.5rem;
+    color: var(--primary-color);
 }
 
 .input-group {
     margin-bottom: 1rem;
 }
 
-.input-group label {
-    margin-bottom: 5px;
-    display: block;
-    color: #666;
-}
-
-.input-group input {
+input[type="username"],
+input[type="password"] {
     width: 100%;
-    padding: .5rem;
-    border: none;
-    border-radius: 0.5rem;
-    font-size: 16px;
-    outline: none;
+    padding: 0.8rem;
+    border: 1px solid #444;
+    background-color: #333;
+    color: var(--text-color);
+    border-radius: 0.3rem;
+    font-size: 1rem;
 }
 
 button {
     width: 100%;
-    padding: .5rem;
+    padding: 0.8rem;
+    font-size: 1rem;
+    color: var(--background-color);
+    background-color: var(--primary-color);
     border: none;
-    border-radius: 5px;
-    background: #5cb85c;
-    color: white;
-    font-size: 16px;
+    border-radius: 0.5rem;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background: #4cae4c;
+    background-color: var(--secondary-color);
 }
 
 .message {
-    margin-top: 15px;
-    font-size: 14px;
-    color: #666;
-    text-align: center;
+    color: var(--primary-color);
 }
 
 .message a {
-    color: #5cb85c;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
 .message a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 30rem) {
+
+    /* equivalent to 480px */
+    .container {
+        padding: 1rem;
+    }
 }
