--- a/templates/user-navbar.html
+++ b/templates/user-navbar.html
@@ -2,7 +2,6 @@
 <header>
   <nav>
     <ul>
-
       <li><a href="/books">Catalog</a></li>
       {{ if .Catalog }}
       <li>
@@ -13,7 +12,7 @@
       </li>
       <li>
         <form action="/books" method="post" id="filter">
-          <label>Filter by:</label>
+          <label for="genre-select">Filter by:</label>
           <select name="genre" id="genre-select">
             <option value="">All Genres</option>
             {{ if .Genres}}
@@ -45,14 +44,85 @@
       {{end}}
       <li>
         <form method="POST" action="/reqAdmin" id="AdminPrivs">
-          <button type="submit">GetAdminPrivs</button>
+          <button type="submit">Get Admin Privs</button>
         </form>
       </li>
       <li><a href="/borrowinghistory">Borrowing History</a></li>
       <li><a href="/messages" id="messages">Messages</a></li>
       <li><a href='/logout'>Logout</a></li>
     </ul>
+    <button class="hamburger" id="hamburger">
+
+      <span></span>
+
+      <span></span>
+
+      <span></span>
+
+    </button>
+
   </nav>
+
 </header>
+
+
+<!-- Add a wrapper for the navigation menu -->
+
+<div class="nav-wrapper">
+
+  <ul>
+    <li><a href="/books">Catalog</a></li>
+    {{ if .Catalog }}
+    <li>
+      <form action="/books" method="post" id="search-bar">
+        <input type="text" name="title" placeholder="Search for books">
+        <button type="submit">Search</button>
+      </form>
+    </li>
+    <li>
+      <form action="/books" method="post" id="filter">
+        <label for="genre-select">Filter by:</label>
+        <select name="genre" id="genre-select">
+          <option value="">All Genres</option>
+          {{ if .Genres}}
+          {{ range .Genres }}
+          <option value="{{ . }}">
+            {{ . }}
+          </option>
+          {{ end }}
+          {{ end }}
+        </select>
+        <select name="author" id="author-select">
+          <option value="">All Authors</option>
+          {{ if .Authors }}
+          {{ range .Authors}}
+          <option value="{{ . }}">
+            {{ . }}
+          </option>
+          {{ end }}
+          {{ end }}
+        </select>
+        <select name="user_status">
+          <option value="">All Books</option>
+          <option value="borrowed">Borrowed</option>
+          <option value="requested">Requested</option>
+        </select>
+        <button type="submit">Filter</button>
+      </form>
+    </li>
+    {{end}}
+    <li>
+      <form method="POST" action="/reqAdmin" id="AdminPrivs">
+        <button type="submit">Get Admin Privs</button>
+      </form>
+    </li>
+    <li><a href="/borrowinghistory">Borrowing History</a></li>
+    <li><a href="/messages" id="messages">Messages</a></li>
+    <li><a href='/logout'>Logout</a></li>
+  </ul>
+
+</div>
+<link rel="stylesheet" href="/static/css/navbar.css">
+<script src="/static/js/navbar.js"></script>
 
 {{ end }}
