Default admin creds enabled, confirm password field added

--- a/templates/register.html
+++ b/templates/register.html
@@ -19,6 +19,9 @@
       <div class="input-group">
         <input type="password" id="signupPassword" name="password" required placeholder="Password">
       </div>
+      <div class="input-group">
+        <input type="password" id="signupConfirmPassword" name="confirmPassword" required placeholder="Confirm Password">
+      </div>
       <button type="submit">Register</button>
       {{ if .Message }}
       <p class="message">
