--- a/templates/sys-messages.html
+++ b/templates/sys-messages.html
@@ -3,6 +3,7 @@
 <head>
   <title>{{.Type}}</title>
   <link rel="stylesheet" type="text/css" href="/static/css/sys-messages.css">
+  <script src="/static/js/sys-messages.js"></script>
   <link rel="icon" href="/static/img/icons/book.png" type="image/png">
 </head>
 
